css/scoreboard.css
@import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;700;800&display=swap");

:root {
	--top-border-color: rgb(219, 224, 229);
	--tipsport-border: #c1c7cd;
	--color-black: rgb(5, 22, 37);
	--color-white: #fff;
	--color-red: #d91e28;
	--color-gray: #677a8e;
	--color-gray-light: #f2f5f7;
	--color-blue: #00aeef;

	--font-light: 400;
	--font-bold: 700;
	--font-extra-bold: 800;

	--default-border-radius: 4px;
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: "Public Sans", sans-serif;
}
body {
	padding-bottom: 30px;
}
.Container {
	position: relative;
	width: 100%;
	max-width: 924px;
	padding: 0 1rem;
	margin-inline: auto;
}
.spacer {
	height: 10px;
	margin: 20px 0;
}
/* TOP SCOREBOARD */
.topScoreboard {
	box-shadow: 0 4px 12px 0px rgba(5, 22, 37, 0.1);
	display: flex;
	flex-flow: row nowrap;
	overflow-x: auto;
	-ms-overflow-style: none; /* IE and Edge */
	scrollbar-width: none; /* Firefox */
}
.topScoreboard::-webkit-scrollbar {
	display: none;
}
.topScoreboard a {
	text-decoration: none;
	transition: background-color 200ms ease-in-out;
}
.topScoreboard a:hover,
.topScoreboard a:focus {
	background-color: var(--color-gray-light);
}
.League {
	display: flex;
	flex-flow: nowrap;
}
.league-name {
	padding: 12px 16px;
	border-right: 1px solid var(--top-border-color);
	color: rgb(5, 22, 37);
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	justify-content: flex-end;
	gap: 20px;
	height: 100%;
}
.league-name.set-width {
	min-width: 200px;
}
.league-name h3 {
	font-size: 14px;
	font-weight: var(--font-extra-bold);
	text-transform: uppercase;
	text-align: right;
}
.league-name img {
	width: 16px;
	height: auto;
}
.league-match {
	padding: 12px 16px;
	display: flex;
	flex-flow: column nowrap;
	gap: 3px;
	border-right: 1px solid var(--top-border-color);
}
.league-team {
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	justify-content: space-between;
	gap: 12px;
}
.team-container {
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	gap: 12px;
}
.team-container img {
	width: 22px;
	height: auto;
}
.team-name {
	font-size: 15px;
	color: var(--color-black);
	text-transform: uppercase;
}
.team-score {
	background-color: var(--color-black);
	color: var(--color-white);
	font-size: 13px;
	font-weight: var(--font-extra-bold);
	min-width: 24px;
	height: 20px;
	border-radius: var(--default-border-radius);
	display: grid;
	place-items: center;
}
.team-score.active-match {
	background-color: var(--color-red);
}
.team-score.future-match {
	background-color: var(--color-gray);
}
.topScoreboard-noData {
	margin: 12px 16px;
	padding: 30px 12px;
	border: 1px solid var(--color-gray);
	border-radius: var(--default-border-radius);
	display: grid;
	place-items: center;
}
.topScoreboard-noData h1 {
	text-transform: uppercase;
	font-size: 22px;
	color: var(--color-gray);
}

/* MAIN SCOREBOARD */
.mainScoreboard {
	position: relative;
}
.loadContainer {
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	height: 10px;
}
.loadContainer::after {
	position: absolute;
	content: "";
	left: 0;
	top: 0;
	bottom: 0;
	width: 0%;
	background-color: #00aeef;
	animation: loadingAnim 400ms;
}
@keyframes loadingAnim {
	0% {
		width: 0%;
	}
	100% {
		width: 100%;
	}
}
.mainScoreboard-header {
	background-color: var(--color-gray-light);
	padding: 16px 12px 10px;
	border-radius: var(--default-border-radius);
}
.mainScoreboard-header.noData {
	padding: 16px 12px;
}
.header-date {
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	justify-content: space-between;
	gap: 20px;
}
.date-dayChanger {
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	gap: 12px;
	cursor: pointer;
}
.date-dayChanger:hover h5 {
	text-decoration: underline;
}
.date-dayChanger img {
	width: 22px;
	height: auto;
}
.date-dayChanger h5 {
	font-weight: var(--font-extra-bold);
	color: var(--color-black);
	font-size: 13px;
	text-transform: uppercase;
}
.date-currentDay {
	font-weight: var(--font-bold);
	text-transform: uppercase;
	font-size: 18px;
}

.header-tabs {
	margin-top: 20px;
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	gap: 16px;
	width: 100%;
	overflow-x: auto;
	padding-bottom: 6px;
	-ms-overflow-style: none; /* IE and Edge */
	scrollbar-width: none; /* Firefox */
}
.header-tabs::-webkit-scrollbar {
	display: none;
}
.tab-container {
	padding: 12px 16px;
	background-color: var(--color-white);
	border-radius: var(--default-border-radius);
	cursor: pointer;
}
.tab-container:hover p {
	text-decoration: underline;
}
.tab-container.active {
	background-color: var(--color-blue);
}
.tab-container p {
	color: var(--color-gray);
	font-size: 13px;
	font-weight: var(--font-extra-bold);
	text-transform: uppercase;
	white-space: nowrap;
}
.tab-container.active p {
	color: var(--color-white);
}

.mainScoreBoard-body {
	margin-top: 18px;
}
.mainScoreBoard-body--noData {
	margin-top: 18px;
	margin-bottom: 18px;
	display: grid;
	place-items: center;
	min-height: 150px;
	border: 1px solid var(--color-gray);
	border-radius: var(--default-border-radius);
}
.mainScoreBoard-body--noData h1 {
	text-transform: uppercase;
	font-size: 28px;
	color: var(--color-gray);
}
.body-match {
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	border-bottom: 1px solid var(--top-border-color);
	padding: 12px 6px;
	cursor: pointer;
	transition: background-color 200ms ease-in-out;
	text-decoration: none;
}
.body-match:hover {
	background-color: var(--color-gray-light);
}
.match-infoContainer {
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
}
.match-team {
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	gap: 12px;
}
.match-team h3 {
	color: var(--color-black);
	font-size: 16px;
	font-weight: var(--font-bold);
}
.match-team img {
	height: 32px;
	width: auto;
}
.match-team.match-team--left {
	width: 90px;
	justify-content: flex-end;
}
.match-scoreContainer {
	margin-inline: 16px;
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
}
.match-score {
	background-color: var(--color-black);
	color: var(--color-white);
	font-size: 16px;
	font-weight: var(--font-bold);
	min-width: 32px;
	height: 32px;
	border-radius: var(--default-border-radius);
	display: grid;
	place-items: center;
}
.match-score.active-match {
	background-color: var(--color-red);
}
.match-score.future-match {
	background-color: var(--color-gray);
}
.match-date {
	background-color: var(--color-gray-light);
	border-radius: var(--default-border-radius);
	padding: 0px 8px;
	margin-inline: 3px;
	height: 32px;
	min-width: 120px;
	display: flex;
	flex-flow: column nowrap;
	justify-content: center;
	align-items: center;
}
.match-date p {
	color: var(--color-black);
	font-size: 11px;
	text-align: center;
	line-height: 1.1;
}
.match-date.active-match p {
	color: var(--color-red);
}
.match-date.future-match p {
	color: var(--color-gray);
}

.match-tabsContainer {
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	justify-content: flex-end;
	gap: 16px;
	margin-left: auto;
}
.match-tab {
	padding: 10px 8px;
	border-radius: var(--default-border-radius);
	border: 1px solid var(--top-border-color);
	background-color: var(--color-white);
	cursor: pointer;

	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	gap: 8px;

	text-decoration: none;
	color: var(--color-black);

	transition: background-color 200ms ease-in-out;
}
.match-tab:hover,
.match-tab:focus {
	background-color: var(--color-gray-light);
}
.match-tab img {
	width: 14px;
	height: auto;
}
.match-tab p {
	font-size: 13px;
	color: var(--color-black);
}
.tab-tipsportData {
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
}
.tab-tipsportData p {
	padding-inline: 6px;
	border-right: 1px solid var(--tipsport-border);
}
.tab-tipsportData p:first-of-type {
	padding-left: 0px;
}
.tab-tipsportData p:last-of-type {
	border-right: 0px;
	padding-right: 0px;
}
.match-tab--imgOnly img {
	height: 16px;
	width: auto;
}
.mediaTab-container {
	display: flex;
	flex-flow: row nowrap;
	gap: 16px;
}

.scoreBoard-buttonsContainer {
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	justify-content: center;
	gap: 20px;
	margin-top: 10px;
}
.scoreBoard-button {
	padding: 14px 20px;
	background-color: var(--color-blue);
	border-radius: var(--default-border-radius);
	color: var(--color-white);
	text-transform: uppercase;
	font-size: 13px;
	font-weight: var(--font-extra-bold);
	text-decoration: none;
}

/* MD LAYOUT CHANGES */
@media screen and (max-width: 864px) {
	.body-match {
		flex-flow: column nowrap;
		gap: 10px;
	}
	.match-tabsContainer {
		margin-left: 0;
		flex-wrap: wrap;
		justify-content: center;
		gap: 8px;
	}
	.mainScoreBoard-body--noData h1 {
		font-size: 24px;
	}
}
/* MOBILE LAYOUT CHANGES */
@media screen and (max-width: 580px) {
	.date-dayChanger h5 {
		display: none;
	}
	.mainScoreBoard-body--noData h1 {
		font-size: 20px;
	}
	.match-team img {
		height: 22px;
	}
	.match-team.match-team--left {
		width: 70px;
	}
}

